
ChangeLog
 [ + added, - removed, * changed ]
 + 08Mar2022 Adds option to disable rpath per dependency
 + 04Mar2022 Adds option to disable rpath in the objects built
 * 02Mar2022 Fixes OpenACC states
 * 25Feb2022 Adds rpath to MPI libraries and improves the AX_FIND_INSTALLATION macro
 + 16Feb2022 Adds support for GOMP_taskloop_ull and changes interposition mechanism for a more robust one
 + 24Jan2022 Adds OPENACC instrumentation in host and CUDA devices
 + 04Jan2022 Adds XML option to exclude some MPI_Comm_* calls from tracing 
 * 16Dec2022 Assigns same ID's to Infiniband counters ignoring Mellanox driver version
 * 09Nov2021 Updates and upgrades CUDA support
 * 09Nov2021 Ensures native and uncore counters are uniquely identified
 * 19Oct2021 Fixes trace control file checks, skipping them if needed structures are not allocated
 * 27Sep2021 Fixes states in OpenMP taskgroup and taskloop regions 
 + 22Sep2021 Adds dependency lines between instantiation and execution of OpenMP tasks for GNU libgomp runtime
 + 06Sep2021 Adds missing wrapper for __kmpc_critical_with_hint
 + 31Aug2021 Extends communications matching algorithm to support applications calling MPI_Irecv and MPI_Wait from different threads
 * 24Aug2021 Fixes unreleased mutex in xtr_hash_query and xtr_hash_add
 * 05Aug2021 Creates new event handler for ADD_RESERVED_MEM_EV and SUB_RESERVED_MEM_EV 
 * 05Aug2021 Fix wrong arguments for mpi_win_lock and mpi_compare_and_swap wrappers
 * 03Aug2021 Makes CPUID event start at 1
 * 03Aug2021 Sampling temporal files not created if disabled in XML
 + 03Aug2021 Reads PC on RISC-V architecture to add support for time sampling
 * 06Jul2021 Adds L3 store misses offcore counter PEBS sampling (closes #62)
 * 06Jul2021 Adds new option ([-no]-translate-data-addresses) to mpi2prv (closes #61)
 * 06Jul2021 Fixes calloc() behaviour (closes #60)
 * 06Jul2021 Fixes realloc comment in mpi2prv (closes #59)